# Proyecto-AgentePro-

./: .gitignore  PROMPT_MAESTRO_AGENTEPRO_2.0.md  handoff.md  sonar-project.properties
agentepro/: .dockerignore  .gitignore  Caddyfile  Dockerfile.railway  LICENSE  NEXT_STEPS.md  PRICING.md  README.md  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml
agentepro/backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml  railway.json  test.db-journal
agentepro/backend/alembic/: env.py
agentepro/backend/alembic/versions/: 001_initial_schema.py  002_calls_instagram_hubspot.py  003_password_reset_requests.py  004_manual_billing.py  005_notion_crm.py  006_appointments.py  007_inicial_plan.py  008_owner_handoff.py
agentepro/backend/app/: config.py  database.py  dependencies.py  main.py
agentepro/backend/app/api/v1/: admin.py  agent.py  appointments.py  auth.py  automations.py  calls.py  contacts.py  conversations.py  instagram.py  metrics.py  notion.py  provisioning.py  router.py  subscriptions.py  tenants.py  voice.py  whatsapp.py
agentepro/backend/app/core/: exceptions.py  middleware.py  plans.py  rate_limit.py  security.py  seed.py  socket.py  tenant_scope.py
agentepro/backend/app/modal_tasks/: app.py  audio_transcriber.py  bulk_campaigns.py  follow_up_leads.py  instagram_scheduler.py  weekly_reports.py
agentepro/backend/app/models/: __init__.py  agent_config.py  appointment.py  automation.py  automation_run.py  call.py  call_summary.py  contact.py  conversation.py  hubspot_sync_log.py  instagram_post.py  message.py  password_reset.py  subscription.py  tenant.py  user.py  voice_config.py  webhook_log.py
agentepro/backend/app/schemas/: __init__.py  agent_config.py  appointment.py  auth.py  automation.py  call.py  common.py  contact.py  conversation.py  instagram.py  message.py  metrics.py  subscription.py  tenant.py  user.py  voice_config.py  webhook_meta.py  webhook_retell.py
agentepro/backend/app/services/: appointment_service.py  call_service.py  contact_service.py  conversation_service.py  culqi_service.py  metrics_service.py  notification_service.py
agentepro/backend/app/services/ai/: agent.py  call_summarizer.py  context_manager.py  instagram_content_generator.py  intent_detector.py  lead_scorer.py  prompt_builder.py  response_formatter.py  voice_agent.py  voice_prompt_builder.py
agentepro/backend/app/services/crm/: contact_sync.py  deal_manager.py  hubspot_client.py  pipeline_updater.py
agentepro/backend/app/services/instagram/: client.py  dm_handler.py  post_generator.py  scheduler.py
agentepro/backend/app/services/notion/: __init__.py  notion_client.py  notion_sync.py
agentepro/backend/app/services/provisioning/: hubspot_provisioner.py  retell_provisioner.py  tenant_provisioner.py  twilio_provisioner.py
agentepro/backend/app/services/voice/: call_handler.py  outbound_caller.py  retell_client.py  twilio_client.py
agentepro/backend/app/services/whatsapp/: client.py  message_parser.py  sender.py  twilio_whatsapp_client.py  webhook_handler.py
agentepro/backend/app/utils/: encryption.py  helpers.py  logger.py
agentepro/backend/app/webhooks/: culqi.py  meta_instagram.py  meta_whatsapp.py  retell.py  twilio_voice.py  twilio_whatsapp.py
agentepro/backend/app/workers/: celery_app.py  email_tasks.py  maintenance_tasks.py  reminder_tasks.py
agentepro/backend/tests/: conftest.py  helpers.py  test_ai_agent.py  test_api_admin_more.py  test_api_agent.py  test_api_auth_more.py  test_api_billing_more.py  test_api_contacts.py  test_api_conversations.py  test_api_metrics.py  test_api_misc.py  test_api_provisioning.py  test_api_tenants.py  test_api_whatsapp.py  test_app_meta.py  test_appointments.py  test_auth_integration.py  test_auth_required.py  test_billing_integration.py  test_calls.py  test_models_tenant_properties.py  test_notion.py  test_provisioning.py  test_security_extra.py  test_unit_ai_pure.py  test_unit_ai_services.py  test_unit_config.py  test_unit_encryption.py  test_unit_exceptions.py  test_unit_helpers.py  test_unit_message_parser.py  test_unit_rate_limit.py  test_unit_schemas.py  test_unit_security.py  test_unit_sender_post.py  test_unit_voice.py  test_unit_whatsapp_flow.py  test_webhook_integration.py  test_webhook_whatsapp.py  test_whatsapp_readiness.py
agentepro/docs/: 01-vision-y-conceptos.md  02-arquitectura.md  03-modelo-de-datos.md  04-flujos-clave.md  05-api-referencia.md  06-cuentas-roles-y-superadmin.md  07-guia-de-pruebas.md  08-integraciones-externas.md  09-frontend-dashboard.md  10-operacion-y-despliegue.md  11-roadmap-a-produccion.md  README.md
agentepro/frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vercel.json  (+2 more)
docs/: COMO_CONSEGUIR_API_KEYS.md  EMPEZAR_AQUI_PASO_A_PASO.md  ESTADO_Y_GUIA_DE_VENTA.md  Formulario INDECOPI - AgentePro (rellenado).docx  GUIA_CITAS.md  GUIA_CONECTAR_CLIENTE_NUEVO.md  GUIA_DESPLIEGUE_PASO_A_PASO.md  GUIA_DESPLIEGUE_RAILWAY.md  GUIA_ENTERPRISE_PASO_A_PASO.md  GUIA_LLAMADA_DE_VOZ.md  GUIA_NOTION_CRM.md  GUIA_PRUEBAS_CON_Y_SIN_API.md  GUIA_RAILWAY_PASO_A_PASITO.md  IDEAS.md  MANUAL_DE_PRUEBAS.md  MANUAL_DE_VENTAS.md  Manual_de_Usuario_AgentePro.docx  Memoria_Descriptiva_AgentePro.docx  PLAN_COBRO_MANUAL.md  PLAN_MAESTRO.md  PLAN_MEJORAS.md  Plan_de_Pruebas_de_Software_AgentePro.docx  Plantilla_Registro_General_Software.docx  REGISTRO_INDECOPI.md  _PRUEBA_WHATSAPP_LOCAL.md  _gen_docx.py  _gen_formulario.py  _gen_indecopi_6.py  _gen_plan_pruebas.py  _gen_plantilla_registro.py  indecopi formiulario derecho de software indecopi.docx
(+119 files in other folders)
