[project]
name = "agentepro"
version = "2.0.0"
description = "AgentePro 2.0 - SaaS de automatización de negocios con IA"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "structlog>=24.2.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.2.0",
    "phonenumbers>=8.13.0",
    "cryptography>=42.0.0",
    "python-socketio>=5.11.0",
    "retell-sdk>=4.0.0",
    "twilio>=9.0.0",
    "hubspot-api-client>=10.0.0",
    "modal>=0.63.0",
    "resend>=2.0.0",
    "fal-client>=0.5.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Por defecto NO se corren los chequeos de "preparación" (readiness): esos
# verifican contra el servidor REAL que cada negocio ya tiene conectada su
# WhatsApp Cloud API / API keys. Fallan a propósito hasta que las configures.
# Para correrlos: pytest -m readiness   (apuntando al backend en producción).
addopts = "-m 'not readiness'"
markers = [
    "readiness: chequeos operativos contra el servidor real (WhatsApp/keys por negocio)",
]

[tool.uv.scripts]
dev = "uvicorn app.main:socket_app --host 0.0.0.0 --port 8000 --reload"
test = "pytest --cov=app --cov-report=term-missing"
migrate = "alembic upgrade head"
worker = "celery -A app.workers.celery_app worker --loglevel=info"
