[project]
name = "agentepro"
version = "2.0.0"
description = "AgentePro 2.0 - SaaS de automatización de negocios con IA"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "structlog>=24.2.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.2.0",
    "phonenumbers>=8.13.0",
    "cryptography>=42.0.0",
    "python-socketio>=5.11.0",
    "retell-sdk>=4.0.0",
    "twilio>=9.0.0",
    "hubspot-api-client>=10.0.0",
    "modal>=0.63.0",
    "resend>=2.0.0",
    "fal-client>=0.5.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
# Rutas relativas en el reporte para que SonarQube (escaneando desde la raíz del
# repo) resuelva los archivos: el coverage se GENERA DESDE LA RAÍZ (ver comando en
# sonar-project.properties), así los nombres quedan como agentepro/backend/app/...
# Los patrones de omit usan */ para ser independientes del directorio de ejecución.
relative_files = true
omit = [
    "agentepro/backend/tests/*",
    "agentepro/backend/app/workers/*",
    "agentepro/backend/app/modal_tasks/*",
    "agentepro/backend/app/main.py",
    "agentepro/backend/app/core/socket.py",
    # Adaptadores de APIs externas (glue de integración: solo llaman al SDK/HTTP
    # de un tercero). Se prueban por integración, no por unidad.
    "agentepro/backend/app/services/whatsapp/client.py",
    "agentepro/backend/app/services/whatsapp/twilio_whatsapp_client.py",
    "agentepro/backend/app/services/voice/twilio_client.py",
    "agentepro/backend/app/services/voice/retell_client.py",
    "agentepro/backend/app/services/notion/notion_client.py",
    "agentepro/backend/app/services/instagram/client.py",
    "agentepro/backend/app/services/instagram/scheduler.py",
    "agentepro/backend/app/services/crm/*",          # sincronización HubSpot (adaptadores)
    "agentepro/backend/app/services/provisioning/*", # alta en Retell/Twilio/HubSpot (onboarding)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Por defecto NO se corren los chequeos de "preparación" (readiness): esos
# verifican contra el servidor REAL que cada negocio ya tiene conectada su
# WhatsApp Cloud API / API keys. Fallan a propósito hasta que las configures.
# Para correrlos: pytest -m readiness   (apuntando al backend en producción).
addopts = "-m 'not readiness'"
markers = [
    "readiness: chequeos operativos contra el servidor real (WhatsApp/keys por negocio)",
]

[tool.uv.scripts]
dev = "uvicorn app.main:socket_app --host 0.0.0.0 --port 8000 --reload"
test = "pytest --cov=app --cov-report=term-missing"
migrate = "alembic upgrade head"
worker = "celery -A app.workers.celery_app worker --loglevel=info"
